<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sebastian.componentesui.ScrollActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="16dp"
       android:orientation="vertical">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:text="@string/android_scrollview_example"
          android:textSize="20dp"
          android:textAlignment="center"/>

      <Button
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:text="@string/ejemplo_1" />

      <Button
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:text="@string/ejemplo_2" />

      <Button
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:text="@string/ejemplo_3" />
      <Button
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:text="@string/ejemplo_4" />

      <Button
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:text="@string/ejemplo_5" />

      <Button
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:text="@string/ejemplo_6" />
      <Button
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:text="@string/ejemplo_7" />

      <Button
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:text="@string/ejemplo_8" />

      <Button
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:text="@string/ejemplo_9" />
      <Button
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:text="@string/ejemplo_10" />

      <Button
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:text="@string/ejemplo_11" />

      <Button
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:text="ejemplo 12" />


   </LinearLayout>

</ScrollView>
